fix: scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -119,9 +119,23 @@
 }
 @layer base {
 
+    html, body, #root {
+        height: 100vh;
+        width: 100vw;
+        margin: 0;
+        padding: 0;
+    }
+
     body {
         @apply bg-background text-foreground;
+        overflow: hidden;
+        user-select: none;
         font-family: "JetBrains Mono";
+    }
+
+    #root {
+        display: flex;
+        flex-direction: column;
     }
 
     * {
